Crud de usuario e grupo

--- a/WebContent/template/Menu.xhtml
+++ b/WebContent/template/Menu.xhtml
@@ -5,17 +5,21 @@
 	<nav class="aw-menu">
 		<ul>
 			<li>
-				<h:link><i class="fa  fa-fw  fa-home"></i>Dashboard</h:link>
+				<h:link outcome="index"><i class="fa  fa-fw  fa-home"></i>Pagina Inicial</h:link>
 			</li>
+			
 			<li>
-				<h:link outcome="Pessoa"><i class="fa  fa-fw  fa-user"></i>Clientes</h:link>
+				<h:link outcome="Pessoa"><i class="fa  fa-fw  fa-user"></i>Usuario</h:link>
 			</li>
+			
 			<li>
-				<h:link outcome="Grupo"><i class="fa fa-users"></i>Grupos</h:link>
+				<h:link outcome="Grupo"><i class="fa fa-users"></i>Grupo</h:link>
 			</li>
+			
 			<li>
-				<h:link><i class="fa  fa-fw  fa-cog"></i>Configurações</h:link>
+				<h:link outcome="Delegacia"><i class="fa  fa-fw  fa-cog"></i>Delegacia</h:link>
 			</li>
+			
 		</ul>
 	</nav>
 	
