--- a/WebContent/template/Menu.xhtml
+++ b/WebContent/template/Menu.xhtml
@@ -2,6 +2,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	
+	<h:form style="display: inline-block" enctype="multipart/form-data" acceptcharset="UTF-8">
 	<nav class="aw-menu">
 		<ul>
 			<li>
@@ -20,7 +21,11 @@
 				<h:link outcome="Delegacia"><i class="fa  fa-fw  fa-cog"></i>Delegacia</h:link>
 			</li>
 			
+			<li>
+				<h:commandLink action="#{PessoaBean.sair()}" value="Sair" />
+			</li>
+			
 		</ul>
 	</nav>
-	
+	</h:form>
 </ui:composition>
