Editar feitos com sucesso

--- a/WebContent/template/Menu.xhtml
+++ b/WebContent/template/Menu.xhtml
@@ -22,6 +22,10 @@
 			</li>
 			
 			<li>
+				<h:link outcome="Equipamento"><i class="fa  fa-fw  fa-cog"></i>Equipamento</h:link>
+			</li>
+			
+			<li>
 				<h:commandLink action="#{PessoaBean.sair()}" value="Sair" />
 			</li>
 			
