Adicionando login customizado falta ver os redirecionamentos das paginas

--- a/src/main/webapp/WEB-INF/template/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/Menu.xhtml
@@ -26,7 +26,7 @@
 			</li>
 			
 			<li>
-				<h:commandLink  url="/j_spring_security_logout" value="Sair" />
+				<h:commandLink action="#{pessoaBean.sair()}" value="Sair" />
 			</li>
 			
 		</ul>
