--- a/src/main/webapp/WEB-INF/template/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/Menu.xhtml
@@ -26,7 +26,7 @@
 			</li>
 			
 			<li>
-				<h:commandLink action="#{pessoaBean.sair()}" value="Sair" />
+				<h:commandLink action="#{loginBean.sair()}" value="Sair" />
 			</li>
 			
 		</ul>
