Remodelando pastas do sistema

--- a/src/main/webapp/WEB-INF/template/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/Menu.xhtml
@@ -10,19 +10,20 @@
 			</li>
 			
 			<li>
-				<h:link outcome="/Consulta/Pessoa"><i class="fa  fa-fw  fa-user"></i>Usuario</h:link>
+				<h:link outcome="/site/Pessoa/Consulta/Pessoa"><i class="fa  fa-fw  fa-user"></i>Usuario</h:link>
+			</li>
+			
+			<!-- 
+			<li>
+				<h:link outcome="/site/Grupo/Consulta/Grupo"><i class="fa fa-users"></i>Grupo</h:link>
+			</li>
+			 -->
+			<li>
+				<h:link outcome="/site/Delegacia/Consulta/Delegacia"><i class="fa  fa-fw  fa-cog"></i>Delegacia</h:link>
 			</li>
 			
 			<li>
-				<h:link outcome="/Consulta/Grupo"><i class="fa fa-users"></i>Grupo</h:link>
-			</li>
-			
-			<li>
-				<h:link outcome="/Consulta/Delegacia"><i class="fa  fa-fw  fa-cog"></i>Delegacia</h:link>
-			</li>
-			
-			<li>
-				<h:link outcome="/Consulta/Equipamento"><i class="fa  fa-fw  fa-cog"></i>Equipamento</h:link>
+				<h:link outcome="/site/Equipamento/Consulta/Equipamento"><i class="fa  fa-fw  fa-cog"></i>Equipamento</h:link>
 			</li>
 			
 			<li>
