--- a/src/main/webapp/WEB-INF/template/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/Menu.xhtml
@@ -13,11 +13,16 @@
 				<h:link outcome="/site/Pessoa/Consulta/Pessoa"><i class="fa  fa-fw  fa-user"></i>Usuario</h:link>
 			</li>
 			
+			<li>
+				<h:link outcome="/site/Pessoa/MudarSenha/MudarSenha"><i class="fa  fa-fw  fa-user"></i>Mudar Senha</h:link>
+			</li>
+			
 			<!-- 
 			<li>
 				<h:link outcome="/site/Grupo/Consulta/Grupo"><i class="fa fa-users"></i>Grupo</h:link>
 			</li>
 			 -->
+			
 			<li>
 				<h:link outcome="/site/Delegacia/Consulta/Delegacia"><i class="fa  fa-fw  fa-cog"></i>Delegacia</h:link>
 			</li>
