Mudando permissão de pastas

--- a/src/main/webapp/WEB-INF/template/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/Menu.xhtml
@@ -10,25 +10,31 @@
 			</li>
 			
 			<li>
-				<h:link outcome="/site/Pessoa/Consulta/Pessoa"><i class="fa  fa-fw  fa-user"></i>Usuario</h:link>
+				<h:link outcome="/site/Pessoa/Consulta/Pessoa" >
+				<i class="fa  fa-fw  fa-user"></i>
+				Usuario
+				</h:link>
 			</li>
 			
 			<li>
-				<h:link outcome="/site/Pessoa/MudarSenha/MudarSenha"><i class="fa  fa-fw  fa-user"></i>Mudar Senha</h:link>
-			</li>
-			
-			<!-- 
-			<li>
-				<h:link outcome="/site/Grupo/Consulta/Grupo"><i class="fa fa-users"></i>Grupo</h:link>
-			</li>
-			 -->
-			
-			<li>
-				<h:link outcome="/site/Delegacia/Consulta/Delegacia"><i class="fa  fa-fw  fa-cog"></i>Delegacia</h:link>
+				<h:link outcome="/site/Pessoa/MudarSenha/MudarSenha" >
+				<i class="fa  fa-fw  fa-user"></i>
+				Mudar Senha
+				</h:link>
 			</li>
 			
 			<li>
-				<h:link outcome="/site/Equipamento/Consulta/Equipamento"><i class="fa  fa-fw  fa-cog"></i>Equipamento</h:link>
+				<h:link outcome="/site/Delegacia/Consulta/Delegacia" >
+				<i class="fa  fa-fw  fa-cog"></i>
+				Delegacia
+				</h:link>
+			</li>
+			
+			<li>
+				<h:link outcome="/site/Equipamento/Consulta/Equipamento" >
+				<i class="fa  fa-fw  fa-cog"></i>
+				Equipamento
+				</h:link>
 			</li>
 			
 			<li>
