Fazendo com que o administrador altera a senha de qualquer usuario

--- a/src/main/webapp/WEB-INF/template/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/Menu.xhtml
@@ -19,7 +19,7 @@
 			<li>
 				<h:link outcome="/site/Pessoa/MudarSenha/MudarSenha" >
 				<i class="fa  fa-fw  fa-user"></i>
-				Mudar Senha
+				Mudar Sua Propria Senha
 				</h:link>
 			</li>
 			
