--- a/src/main/webapp/WEB-INF/template/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/Menu.xhtml
@@ -6,39 +6,51 @@
 	<nav class="aw-menu">
 		<ul>
 			<li>
-				<h:link outcome="/Home"><i class="fa  fa-fw  fa-home"></i>Pagina Inicial</h:link>
+				<h:link outcome="/Home">
+					<i class="fa  fa-fw  fa-home fa-1x" aria-hidden="true"></i>
+					Pagina Inicial
+				</h:link>
 			</li>
 			
 			<li>
-				<h:link outcome="/site/Pessoa/Consulta/Pessoa" >
-				<i class="fa  fa-fw  fa-user"></i>
-				Usuario
+				<h:link outcome="/site/Pessoa/Consulta/Pessoa" rendered="#{seguranca.acessoCadastroPermitido}">
+					<i class="fa  fa-fw  fa-user fa-1x"></i>
+					Usuario
 				</h:link>
 			</li>
 			
 			<li>
 				<h:link outcome="/site/Pessoa/MudarSenha/MudarSenha" >
-				<i class="fa  fa-fw  fa-user"></i>
-				Mudar Sua Propria Senha
+					<i class="fa fa-lock fa-1x" aria-hidden="true"></i>
+					Mudar Sua Senha
 				</h:link>
 			</li>
 			
 			<li>
-				<h:link outcome="/site/Delegacia/Consulta/Delegacia" >
-				<i class="fa  fa-fw  fa-cog"></i>
-				Delegacia
+				<h:link outcome="/site/UnidadePolicial/Consulta/UnidadePolicial" rendered="#{seguranca.acessoCadastroPermitido}">
+					<i class="icon fa fa-building"></i>
+					Unidade Policial
+				</h:link>
+			</li>
+			
+			<li>
+				<h:link outcome="/site/Setor/Consulta/Setor" rendered="#{seguranca.acessoCadastroPermitido}">
+					<i class="icon fa fa-building"></i>
+					Setor
 				</h:link>
 			</li>
 			
 			<li>
 				<h:link outcome="/site/Equipamento/Consulta/Equipamento" >
-				<i class="fa  fa-fw  fa-cog"></i>
+				<i class="fa fa-laptop" aria-hidden="true"></i>
 				Equipamento
 				</h:link>
 			</li>
 			
 			<li>
-				<h:commandLink action="#{loginBean.sair()}" value="Sair" />
+				<h:commandLink action="#{loginBean.sair()}" value="Sair" >
+				<i class="fa fa-sign-out" aria-hidden="true"></i>
+				</h:commandLink>
 			</li>
 			
 		</ul>
